# HackBVP

./: .gitignore  LICENSE  package-lock.json  run.ps1  start.bat
backend/: .env.example  config.py  engine.py  main.py  pyproject.toml  state.py  ws.py
backend/api/: deps.py  engine.py  main.py  routes.py  state.py  ws.py
backend/core/: interfaces.py  types.py
backend/models/: pose_stub.py  presence.py  vitals.py
backend/sensing_signal/: fft_vitals.py  hampel.py  phase.py
backend/simulator/: breathing_model.py  csi_generator.py  noise.py  recorder.py  replay.py
backend/tests/: test_api.py  test_models.py  test_replay_integration.py  test_signal.py  test_simulator.py  test_ws.py
backend/tests/fixtures/: sample_session.jsonl
frontend/: .env.example  .env.local.example  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/replay/: page.tsx
frontend/cloned_anuchome/: design.css  index.html
frontend/components/: AmplitudeChart.tsx  ColDividers.tsx  PoseCanvas.tsx  PresencePanel.tsx  ReplayPicker.tsx  SectionGrid.tsx  SectionWrapper.tsx  SmoothScroll.tsx  SourceDropdown.tsx  StatusBar.tsx  ThemeLayout.tsx  VitalsPanel.tsx  WifiVisualization.tsx
frontend/hooks/: useReveal.ts  useSensingStream.tsx
frontend/lib/: api.ts  mockData.ts  types.ts
